--- a/ioteca_web/bower.json
+++ b/ioteca_web/bower.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "angular": "^1.5.6",
-    "angular-ui-router": "^0.3.1"
+    "angular-ui-router": "^0.3.1",
+    "angular-resource": "^1.5.6"
   }
 }
